--- a/package.json
+++ b/package.json
@@ -11,17 +11,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^7.3.3",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "jquery": "^3.3.1",
+    "ng-sidebar": "^8.0.0",
+    "ngx-bootstrap": "^3.3.0",
+    "ngx-loading": "^3.0.1",
+    "ngx-toastr": "^9.1.2",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.7",
+    "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
