--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
               "./src/cssFiles/style.css",
               "./src/cssFiles/custom.css",
               "./src/cssFiles/google_fonts.css",
-              "./src/styles.css"
+              "./src/styles.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": [
               "./src/js/jquery-3.2.1.min.js",
