--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
             "scripts": [
               "./src/js/jquery-3.2.1.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "./src/js/bootstrap.min.js"
             ]
           },
           "configurations": {
