--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "ng-sidebar": "^8.0.0",
+    "ngx-device-detector": "^1.3.5",
     "ngx-loading": "^3.0.1",
     "ngx-toastr": "^9.1.2",
     "popper": "^1.0.1",
