--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-device-detector": "^1.3.5",
     "ngx-loading": "^3.0.1",
     "ngx-toastr": "^9.1.2",
+    "ngx-vcard": "^1.1.6",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
     "rxjs": "6.0.0",
