--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.3.1",
     "ng-sidebar": "^8.0.0",
     "ngx-device-detector": "^1.3.5",
+    "ngx-image-cropper": "^1.3.9",
     "ngx-loading": "^3.0.1",
     "ngx-toastr": "^9.1.2",
     "ngx-vcard": "^1.1.6",
