--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,8 @@
             "scripts": [
               "./src/js/jquery-3.2.1.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
-              "./src/js/bootstrap.min.js"
+              "./src/js/bootstrap.min.js",
+              "node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js"
             ]
           },
           "configurations": {
