--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "blueimp-canvas-to-blob": "^3.14.0",
     "core-js": "^2.5.4",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "ng-sidebar": "^8.0.0",
+    "ng2-img-max": "^2.1.18",
     "ngx-device-detector": "^1.3.5",
     "ngx-image-cropper": "^1.3.9",
     "ngx-loading": "^3.0.1",
