--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ngx-device-detector": "^1.3.5",
     "ngx-image-cropper": "^1.3.9",
     "ngx-loading": "^3.0.1",
+    "ngx-smart-modal": "^7.1.1",
     "ngx-toastr": "^9.1.2",
     "ngx-vcard": "^1.1.6",
     "popper": "^1.0.1",
@@ -55,6 +56,8 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
