--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "json2xml": "^0.1.3",
     "ng-sidebar": "^8.0.0",
     "ng2-img-max": "^2.1.18",
     "ngx-device-detector": "^1.3.5",
