--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "jquery": "^3.3.1",
     "json2xml": "^0.1.3",
     "ng-sidebar": "^8.0.0",
+    "ng2-currency-mask": "^5.3.1",
     "ng2-img-max": "^2.1.18",
+    "ngx-currency": "^2.0.0",
     "ngx-device-detector": "^1.3.5",
     "ngx-image-cropper": "^1.3.9",
     "ngx-loading": "^3.0.1",
