--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "protractor": "~5.3.0",
+    "puppeteer": "^1.18.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
