--- a/package.json
+++ b/package.json
@@ -68,6 +68,6 @@
     "puppeteer": "^1.18.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "^2.9.2"
   }
 }
