--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build-prod": "ng build --prod",
-    "deploy": "firebase deploy --token AIzaSyB7LH4lx_q5wJD4q5lEESc2hO6pB5UVyCQ --non-interactive"
+    "deploy": "firebase deploy --token $FIREBASE_TOKEN --non-interactive"
   },
   "private": true,
   "dependencies": {
