--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "AlliantCRM:build"
+            "browserTarget": "AlliantCRM:build",
+            
           },
           "configurations": {
             "production": {
