--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "json2xml": "^0.1.3",
+    "moment": "^2.24.0",
     "ng-sidebar": "^8.0.0",
     "ng2-currency-mask": "^5.3.1",
     "ng2-img-max": "^2.1.18",
@@ -37,6 +38,7 @@
     "ngx-device-detector": "^1.3.5",
     "ngx-image-cropper": "^1.3.9",
     "ngx-loading": "^3.0.1",
+    "ngx-moment": "^3.4.0",
     "ngx-smart-modal": "^7.1.1",
     "ngx-toastr": "^9.1.2",
     "ngx-vcard": "^1.1.6",
