--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,7 +2,7 @@ image: node:10
 
 pipelines:
   branches:
-    CRM-dev:
+    CRM-beta:
       - step:
           name: "Build, test and deploy to firebase production"
           deployment: production
