--- a/package.json
+++ b/package.json
@@ -25,18 +25,20 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "@types/jquery": "^3.5.1",
     "angular-ng-autocomplete": "^1.1.17",
     "blueimp-canvas-to-blob": "^3.14.0",
     "chart.js": "^2.9.1",
     "core-js": "^2.5.4",
     "history": "^4.7.2",
-    "jquery": "^3.3.1",
+    "jquery": "^3.5.1",
     "json2xml": "^0.1.3",
     "moment": "^2.24.0",
     "ng-sidebar": "^8.0.0",
     "ng2-charts": "2.2.0",
     "ng2-currency-mask": "^5.3.1",
     "ng2-img-max": "^2.1.18",
+    "ng2-tooltip-directive": "^2.9.22",
     "ngx-currency": "^2.0.0",
     "ngx-device-detector": "^1.3.5",
     "ngx-image-cropper": "^1.3.9",
@@ -51,7 +53,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular-devkit/build-angular": "0.8.9",
     "@angular/cli": "~6.1.0",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
