Code of UI and Functionality changes and addition

--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,10 @@
 {
-    "hosting": {
-      "public": "dist/AlliantCRM",
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ]
-    }
+  "hosting": {
+    "public": "dist/AlliantCRM",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
+}
