--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^7.3.3",
@@ -31,10 +32,11 @@
     "blueimp-canvas-to-blob": "^3.14.0",
     "chart.js": "^2.9.1",
     "core-js": "^2.5.4",
+    "firebase": "^7.21.1",
     "history": "^4.7.2",
     "jquery": "^3.5.1",
     "json2xml": "^0.1.3",
-    "moment": "^2.24.0",
+    "moment": "^2.29.0",
     "ng-sidebar": "^8.0.0",
     "ng2-charts": "2.2.0",
     "ng2-currency-mask": "^5.3.1",
