--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "@ng-select/ng-select": "^2.16.0",
     "@types/jquery": "^3.5.1",
     "angular-ng-autocomplete": "^1.1.17",
+    "angular2-chartjs": "^0.5.1",
     "blueimp-canvas-to-blob": "^3.14.0",
-    "chart.js": "^2.9.1",
+    "chart.js": "^2.9.4",
     "core-js": "^2.5.4",
     "firebase": "^7.21.1",
     "history": "^4.7.2",
     "jquery": "^3.5.1",
     "json2xml": "^0.1.3",
-    "moment": "^2.29.0",
+    "moment": "^2.29.1",
     "ng-sidebar": "^8.0.0",
     "ng2-charts": "2.2.0",
     "ng2-currency-mask": "^5.3.1",
