code of fixes done

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "-": "0.0.1",
     "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^7.3.3",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
@@ -32,9 +32,10 @@
     "angular-ng-autocomplete": "^1.1.17",
     "angular2-chartjs": "^0.5.1",
     "blueimp-canvas-to-blob": "^3.14.0",
-    "chart.js": "^2.9.4",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "firebase": "^7.21.1",
+    "font-awesome": "^4.7.0",
     "g": "^2.0.1",
     "history": "^4.7.2",
     "jquery": "^3.5.1",
@@ -55,6 +56,8 @@
     "ngx-vcard": "^1.1.6",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
+    "primeicons": "^4.1.0",
+    "primeng": "^6.0.0",
     "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
