--- a/angular.json
+++ b/angular.json
@@ -31,13 +31,17 @@
               "./src/cssFiles/custom.css",
               "./src/cssFiles/google_fonts.css",
               "./src/styles.css",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/primeicons/primeicons.css",
+              "./node_modules/primeng/resources/themes/omega/theme.css",
+              "./node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "./src/js/jquery-3.2.1.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "./src/js/bootstrap.min.js",
-              "node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js"
+              "node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js",
+              "node_modules/chart.js/dist/Chart.js"
             ]
           },
           "configurations": {
