--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   "private": true,
   "dependencies": {
     "-": "0.0.1",
-    "@angular/animations": "^6.1.10",
+    "@angular/animations": "^7.2.16",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
     "@angular/fire": "^6.0.3",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^7.3.3",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@ng-select/ng-select": "^2.20.5",
     "@types/jquery": "^3.5.1",
@@ -52,7 +52,7 @@
     "ngx-loading": "^3.0.1",
     "ngx-moment": "^3.4.0",
     "ngx-smart-modal": "^7.1.1",
-    "ngx-toastr": "^9.1.2",
+    "ngx-toastr": "^9.2.0",
     "ngx-vcard": "^1.1.6",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
@@ -63,7 +63,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.8.9",
-    "@angular/cli": "~6.1.0",
+    "@angular/cli": "^7.3.10",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
