upgraded version 8 to 9

--- a/package.json
+++ b/package.json
@@ -14,22 +14,23 @@
   "private": true,
   "dependencies": {
     "-": "0.0.1",
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/fire": "^6.0.3",
-    "@angular/forms": "^8.2.14",
+    "@angular/animations": "^9.1.13",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/fire": "^6.0.1",
+    "@angular/forms": "^9.1.13",
     "@angular/http": "^7.2.16",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@ng-select/ng-select": "^2.20.5",
     "@types/jquery": "^3.5.1",
-    "angular-ng-autocomplete": "^1.1.17",
+    "angular-ng-autocomplete": "^2.0.1",
     "angular2-chartjs": "^0.5.1",
     "blueimp-canvas-to-blob": "^3.14.0",
     "chart.js": "^2.7.2",
@@ -52,20 +53,20 @@
     "ngx-loading": "^3.0.1",
     "ngx-moment": "^3.4.0",
     "ngx-smart-modal": "^7.1.1",
-    "ngx-toastr": "^9.2.0",
+    "ngx-toastr": "^10.0.0",
     "ngx-vcard": "^1.1.6",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
     "primeicons": "^4.1.0",
     "primeng": "^6.0.0",
-    "rxjs": "6.0.0",
-    "zone.js": "^0.8.26"
+    "rxjs": "6.6.7",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^6.1.0",
+    "@angular-devkit/build-angular": "^0.901.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -84,6 +85,11 @@
     "puppeteer": "^1.18.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.7.5"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
