--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   "private": true,
   "dependencies": {
     "-": "0.0.1",
-    "@angular/animations": "^10.2.5",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/core": "^10.2.5",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
     "@angular/fire": "^6.0.1",
-    "@angular/forms": "^10.2.5",
+    "@angular/forms": "^11.2.14",
     "@angular/http": "^7.2.16",
-    "@angular/localize": "^10.2.5",
+    "@angular/localize": "^11.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/router": "^10.2.5",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@ng-select/ng-select": "^2.20.5",
     "@types/jquery": "^3.5.1",
@@ -63,18 +63,18 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.4",
-    "@angular/cli": "^10.2.4",
-    "@angular/compiler-cli": "^10.2.5",
-    "@angular/language-service": "^10.2.5",
-    "@types/jasmine": "~2.8.6",
+    "@angular-devkit/build-angular": "^0.1102.19",
+    "@angular/cli": "^11.2.19",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^6.0.0",
     "firebase-tools": "^7.16.2",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.19",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
