--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,14 @@
               "./src/js/bootstrap.min.js",
               "node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js",
               "node_modules/chart.js/dist/Chart.js"
-            ]
+            ],
+            "aot": false,
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -62,7 +69,8 @@
               "vendorChunk": false,
               "buildOptimizer": true
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
