--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-prod": "ng build --prod",
+    "build-prod": "ng build --configuration production",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN --non-interactive"
   },
   "private": true,
   "dependencies": {
     "-": "0.0.1",
-    "@angular/animations": "^11.2.14",
+    "@angular/animations": "^12.2.16",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
     "@angular/fire": "^6.0.1",
-    "@angular/forms": "^11.2.14",
+    "@angular/forms": "^12.2.16",
     "@angular/http": "^7.2.16",
-    "@angular/localize": "^11.2.14",
+    "@angular/localize": "^12.2.16",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@ng-select/ng-select": "^2.20.5",
     "@types/jquery": "^3.5.1",
@@ -35,6 +35,7 @@
     "blueimp-canvas-to-blob": "^3.14.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "exifr": "^7.1.3",
     "firebase": "^7.21.1",
     "font-awesome": "^4.7.0",
     "g": "^2.0.1",
@@ -46,6 +47,7 @@
     "ng2-charts": "2.2.0",
     "ng2-currency-mask": "^5.3.1",
     "ng2-img-max": "^2.1.18",
+    "ng2-pica": "^1.3.1",
     "ng2-tooltip-directive": "^2.9.22",
     "ngx-currency": "^2.0.0",
     "ngx-device-detector": "^1.3.5",
@@ -60,13 +62,13 @@
     "primeicons": "^4.1.0",
     "primeng": "^6.0.0",
     "rxjs": "6.6.7",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.19",
-    "@angular/cli": "^11.2.19",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "^12.2.17",
+    "@angular/cli": "^12.2.17",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/language-service": "^12.2.16",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -85,11 +87,6 @@
     "puppeteer": "^1.18.1",
     "ts-node": "~5.0.1",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.8"
-  },
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
+    "typescript": "^4.3.5"
   }
 }
