--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "-": "0.0.1",
     "@angular/animations": "^12.2.16",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "^12.2.16",
     "@angular/compiler": "^12.2.16",
     "@angular/core": "^12.2.16",
@@ -23,12 +23,13 @@
     "@angular/forms": "^12.2.16",
     "@angular/http": "^7.2.16",
     "@angular/localize": "^12.2.16",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@ng-select/ng-select": "^2.20.5",
+    "@schematics/angular": "^9.1.13",
     "@types/jquery": "^3.5.1",
     "angular-ng-autocomplete": "^2.0.1",
     "angular2-chartjs": "^0.5.1",
