--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "history": "^4.7.2",
     "jquery": "^3.5.1",
     "json2xml": "^0.1.3",
+    "markdown-it": "^13.0.1",
     "moment": "^2.29.1",
     "ng-sidebar": "^8.0.0",
     "ng2-charts": "2.2.0",
